--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ align-items: center;
 
 .sectiontwo{
     background-color: #C5DDDD;
-    padding: 50px;
+    padding: 50px 0;
 }
 
 #segundotexto{
@@ -132,7 +132,7 @@ align-items: center;
 
 .twoflex{
     display: flex;
-    justify-content: center;
+    justify-content: baseline;
 }
 #nombreraro{
     font-size: 18px;
@@ -174,12 +174,15 @@ align-items: center;
 }
 .sectionthree{
     display: flex;
-    flex-wrap: wrap;
-    padding: 60px;
+    /* flex-wrap: wrap; */
+    padding: 60px 0;
 }
 #imagensectionthree{
     width: 300px;
     height: 300px;
+}
+.imagensectionthree{
+    display: flex;
 }
 .textotextodos{
     width: 500px;
@@ -196,4 +199,69 @@ align-items: center;
 }
 .menues{
     margin-bottom: 20px;
+}
+.sectionfoot{
+    background-color:#C5DDDD;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+    width: 99%;
+    height: 60px;
+    align-items: center;
+}
+
+.sectionsuscribe{
+    background-color: #E0EEEE;
+    padding: 50px 0;
+}
+.textosuscribe{
+    text-align: center;
+    color: #414D4D;
+    font-weight: 600;
+}
+.subscribetext{
+    font-size: 36px;
+}
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  @media (min-width: 768px) {
+    .container {
+      width: 750px;
+    }
+  }
+  @media (min-width: 992px) {
+    .container {
+      width: 970px;
+    }
+  }
+  @media (min-width: 1200px) {
+    .container {
+      width: 1170px;
+    }
+  }
+  .input-textcuatro{
+    margin: black;
+    border-radius: 28px;
+    width: 560px;
+    height: 104px;
+    border: 1px solid #E0EEEE;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: white;
+}
+.sectionfourimg{
+    display: flex;
+    width: 250px;
+}
+.sectionfour{
+    padding: 60px 0;
+}
+.containerfour{
+    
 }
