--- a/styles.css
+++ b/styles.css
@@ -265,8 +265,14 @@ align-items: center;
     color: #414D4D;
 }
 .sectionfourtext{
-    padding: 60px 0;
+    padding: 30px 0;
+    text-align: center;
 }
 .sectionfourimgbox{
     width: 300px;
 }    
+#primertextosectionfour{
+    font-size: 24px;
+    padding: 20px 0;
+    font-weight: 600;
+}
