--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ padding: 0%;
 margin: 0%;
 font-family: "Rubik";
 }
+img{
+    display: block;
+    width: 100%;
+}
 
 .header{
  background-color:#E0EEEE;
@@ -13,6 +17,7 @@ width: 99%;
 position: fixed;
 height: 60px;
 align-items: center;
+top: 0%;
 }
 
 .logo{
@@ -44,48 +49,51 @@ align-items: center;
     background-color: #3D6177;
     border-color: #3D6177;
     color: white;
-    width: 200px;
     height: 72px ;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
+    text-align: center;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
 .input-text{
     margin: black;
     border-radius: 28px;
-    width: 560px;
     height: 104px;
     border: 1px solid #E0EEEE;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: white;
 }
 
 .sectionone{
     align-items: center;
+    margin-top: 50px;
 }
 
 #marcas{
-    padding: 50px;
+    padding: 50px 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    max-width: 700px;
+    margin: auto;
 }
 
 .inputinput{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 50px;
+    margin: auto;
+    padding: 50px 0;
+    width: 70%;
+    min-width: 300px;
+    max-width: 700px;
 }
 
 .slogan{
     width: 890px;
-    height: 132px;
     font-size: 42px;
     display: flex;
     justify-content: center;
@@ -171,12 +179,17 @@ align-items: center;
 }
 .finalinput a{
     text-decoration: none;
+    width: 40%;
+    min-width: 50px;
+    /* height: 90%;
+    min-height: 15px; */
 }
 .sectionthree .container{
     display: flex;
     /* flex-wrap: wrap; */
     padding: 60px 0;
     color: #566666;
+    justify-content: center;
 }
 #imagensectionthree{
     width: 350px;
@@ -190,6 +203,8 @@ align-items: center;
 }
 #flecha{
     display: inline-flex;
+    width: 30px;
+    height: 30px;
 }
 .menues{
     display: flex;
